# lantern

./: .gitignore  CODE_OF_CONDUCT.md  CONTACTS.md  CONTRIBUTING.md  CRYPTO_LIMITS.md  Cargo.toml  DEMO.md  LICENSES.md  MVP.md  PAYLOAD.md  PRIVACY.md  PROTOCOL.md  README.md  ROADMAP.md  SECRET_STORAGE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  VISION.md  rust-toolchain.toml
.cargo/: config.toml
LICENSES/: BSD-3-Clause-subtle.txt  MIT-third-party.txt
apps/lantern-cli/: Cargo.toml  README.md
apps/lantern-cli/src/: contact.rs  error.rs  files.rs  lib.rs  main.rs  node.rs
apps/lantern-cli/tests/: three_process_demo.rs
crates/lantern-bridge/: Cargo.toml  README.md
crates/lantern-bridge/src/: error.rs  lib.rs
crates/lantern-bridge/tests/: encrypted_three_node.rs  persistent_contacts.rs  public_api.rs
crates/lantern-core/: Cargo.toml  README.md
crates/lantern-core/src/: cbor.rs  envelope.rs  error.rs  lib.rs  queue.rs  route.rs
crates/lantern-core/tests/: properties.rs  public_api.rs
crates/lantern-crypto/: Cargo.toml  README.md
crates/lantern-crypto/src/: contact.rs  engine.rs  error.rs  handshake.rs  inner.rs  lib.rs  wrapper.rs
crates/lantern-crypto/tests/: properties.rs
crates/lantern-diagnostics/: Cargo.toml  README.md
crates/lantern-diagnostics/src/: event.rs  journal.rs  lib.rs
crates/lantern-diagnostics/src/journal/: persistence.rs
crates/lantern-diagnostics/tests/: public_api.rs
crates/lantern-lan/: Cargo.toml  README.md
crates/lantern-lan/src/: address.rs  connection.rs  error.rs  framing.rs  hello.rs  lib.rs  peer_limit.rs
crates/lantern-lan/tests/: public_api.rs
crates/lantern-node/: Cargo.toml  README.md
crates/lantern-node/src/: clock.rs  diagnostics.rs  error.rs  lib.rs  profile_lock.rs  runtime.rs
crates/lantern-node/tests/: public_api.rs  sync_lan.rs  three_node_lan.rs
crates/lantern-secret-storage/: Cargo.toml  README.md
crates/lantern-secret-storage/src/: database.rs  error.rs  file.rs  header.rs  lib.rs  profile.rs  state.rs
crates/lantern-secret-storage/tests/: public_api.rs
crates/lantern-storage/: Cargo.toml  README.md
crates/lantern-storage/src/: lib.rs
crates/lantern-storage/tests/: public_api.rs
crates/lantern-sync/: Cargo.toml  README.md
crates/lantern-sync/examples/: sync_probe.rs
crates/lantern-sync/src/: error.rs  exchange.rs  frame.rs  lib.rs  route.rs
crates/lantern-sync/tests/: properties.rs  public_api.rs
crates/lantern-time/: Cargo.toml  README.md
crates/lantern-time/src/: lib.rs
crates/lantern-time/tests/: properties.rs  runtime_integration.rs
crates/lantern-transport/: Cargo.toml  README.md
crates/lantern-transport/src/: adapter.rs  lib.rs  limits.rs  session.rs
crates/lantern-transport/tests/: core_boundary.rs  properties.rs
docs/adr/: 0001-rust-workspace-and-core-boundary.md  0002-strict-cbor-codec.md  0003-bounded-queue-and-deduplication.md  0004-sqlite-queue-persistence.md  0005-bounded-safe-diagnostics.md  0006-monotonic-runtime-clock.md  0007-bounded-transport-interface.md  0008-reproducible-property-tests.md  0009-bounded-node-lifecycle.md  0010-persistent-diagnostics-and-profile-lock.md  0011-stage-2-negative-audit.md  0012-defer-e2ee-library-selection.md  0013-use-vodozemac-for-experimental-mvp.md  0014-two-qr-contact-verification-and-hint-rotation.md  0015-versioned-olm-payload-and-transactional-ratchet.md  0016-persistent-crypto-attempt-limits.md  0017-sqlcipher-secret-storage-with-argon2id.md  0018-cryptographic-milestone-implementation.md  0019-fixed-lan-hello-and-manual-address.md  0020-bounded-length-prefixed-lan-frames.md  0021-bounded-explicit-envelope-sync.md  0022-atomic-received-envelope-persistence.md  0023-persist-copy-budget-before-transfer.md  0024-bounded-bidirectional-lan-encounter.md  0025-persistent-three-node-relay-path.md  0026-transactional-crypto-queue-bridge.md  0027-persistent-verified-endpoint-contacts.md  0028-encrypted-three-node-happy-path.md  0029-wait-and-tamper-negative-path.md  0030-restart-expiry-and-transaction-recovery.md  0031-linux-cli-and-reproducible-demo.md
docs/reports/: STAGE4_MVP_AUDIT.md
docs/research/: CRYPTOGRAPHY_REVIEW.md
experiments/sqlcipher-compat/: Cargo.toml  README.md  RESULTS.md
experiments/sqlcipher-compat/src/: lib.rs
experiments/sqlcipher-compat/tests/: compatibility.rs
experiments/vodozemac-compat/: Cargo.toml  README.md  RESULTS.md
experiments/vodozemac-compat/src/: lib.rs
experiments/vodozemac-compat/tests/: compatibility.rs
scripts/: verify-v0.1.sh
simulator/: README.md  ROUTING_DECISION.md  pyproject.toml  requirements-dev.txt
simulator/lantern_sim/: __init__.py  __main__.py  batch.py  experiments.py  faults.py  model.py  routing.py  scenarios.py  simulation.py  tombstones.py
simulator/results/: README.md  baseline-20-50.json  budget-200-baseline-v2.json  budget-200-faults-v2.json  scaling-rounds-baseline-v2.json  scaling-rounds-faults-v2.json
simulator/tests/: test_experiments.py  test_faults.py  test_model.py  test_routing.py  test_scenarios.py  test_simulation.py  test_tombstones.py
