# SPDX-License-Identifier: MPL-2.0

[workspace]
members = [
    "crates/lantern-core",
    "crates/lantern-diagnostics",
    "crates/lantern-node",
    "crates/lantern-secret-storage",
    "crates/lantern-storage",
    "crates/lantern-time",
    "crates/lantern-transport",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MPL-2.0"

[workspace.dependencies]
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cast_possible_truncation = "deny"
dbg_macro = "deny"
expect_used = "deny"
print_stderr = "deny"
print_stdout = "deny"
unwrap_used = "deny"
