# SPDX-License-Identifier: MPL-2.0

[workspace]
members = [
    "crates/lantern-core",
    "crates/lantern-crypto",
    "crates/lantern-diagnostics",
    "crates/lantern-lan",
    "crates/lantern-node",
    "crates/lantern-secret-storage",
    "crates/lantern-storage",
    "crates/lantern-time",
    "crates/lantern-transport",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MPL-2.0"

[workspace.dependencies]
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }

[patch.crates-io]
libsqlite3-sys = { git = "https://github.com/rusqlite/rusqlite.git", rev = "5ae7fdf83085c595fd54f977b3a56ccacabaf16b" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cast_possible_truncation = "deny"
dbg_macro = "deny"
expect_used = "deny"
print_stderr = "deny"
print_stdout = "deny"
unwrap_used = "deny"
