# SPDX-License-Identifier: MPL-2.0

[package]
name = "lantern-lan"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded LAN connection and version negotiation for Lantern"
readme = "README.md"
publish = false

[lints]
workspace = true
