# SPDX-License-Identifier: MPL-2.0

[package]
name = "lantern-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded SQLite persistence for Lantern queues"
publish = false

[lints]
workspace = true

[dependencies]
lantern-core = { path = "../lantern-core" }
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled", "limits"] }
