# SPDX-License-Identifier: MPL-2.0

[package]
name = "lantern-sync"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded transport-independent Envelope synchronization for Lantern"
readme = "README.md"
publish = false

[lints]
workspace = true

[dependencies]
lantern-core = { path = "../lantern-core" }
lantern-transport = { path = "../lantern-transport" }

[dev-dependencies]
lantern-lan = { path = "../lantern-lan" }
proptest.workspace = true

[[example]]
name = "sync-probe"
path = "examples/sync_probe.rs"
