# SPDX-License-Identifier: MPL-2.0

[package]
name = "lantern-sqlcipher-compat"
version = "0.0.0"
edition = "2024"
rust-version = "1.97"
license = "MPL-2.0"
publish = false

[workspace]
resolver = "3"

[dependencies]
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled-sqlcipher", "limits"] }
zeroize = { version = "=1.9.0", default-features = false, features = ["alloc"] }

[patch.crates-io]
libsqlite3-sys = { git = "https://github.com/rusqlite/rusqlite.git", rev = "5ae7fdf83085c595fd54f977b3a56ccacabaf16b" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
print_stderr = "deny"
print_stdout = "deny"
unwrap_used = "deny"
