# SPDX-License-Identifier: MPL-2.0

[package]
name = "lantern-vodozemac-compat"
version = "0.0.0"
edition = "2024"
rust-version = "1.97"
license = "MPL-2.0"
publish = false

[workspace]
resolver = "3"

[dev-dependencies]
vodozemac = { version = "=0.10.0", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
print_stderr = "deny"
print_stdout = "deny"
unwrap_used = "deny"
